2023-09-25T08:23:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6296765641 # 806
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-25
* notice: last 14d: unq all: 1 16
* notice: prev accum: outdated-unq outdated-all / unq all: 242 508 / 249 522
* notice: next accum: outdated-unq outdated-all / unq all: 242 508 / 250 524
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-09-25]

2023-09-24T16:20:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6291131003 # 804
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-24
* notice: last 14d: unq all: 1 14
* notice: prev accum: outdated-unq outdated-all / unq all: 242 508 / 249 521
* notice: next accum: outdated-unq outdated-all / unq all: 242 508 / 249 522
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-09-24]

2023-09-24T08:19:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6288957557 # 803
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-24
* notice: last 14d: unq all: 1 13
* notice: prev accum: outdated-unq outdated-all / unq all: 242 508 / 248 520
* notice: next accum: outdated-unq outdated-all / unq all: 242 508 / 249 521
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-24]

2023-09-24T01:19:39Z: