@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-25T08:23:08Z",
+  "timestamp" : "2023-09-25T16:23:38Z",
   "count_outdated" : 508,
   "uniques_outdated" : 242,
-  "count" : 524,
+  "count" : 525,
   "uniques" : 250,
   "clones" : [
     {
@@ -70,9 +70,9 @@
     },
     {
       "timestamp": "2023-09-25T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
