@@ -1,3 +1,12 @@
+2023-09-25T16:23:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6302111284 # 807
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-25
+* notice: last 14d: unq all: 1 17
+* notice: prev accum: outdated-unq outdated-all / unq all: 242 508 / 250 524
+* notice: next accum: outdated-unq outdated-all / unq all: 242 508 / 250 525
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [] / [2023-09-25]
+
 2023-09-25T08:23:08Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6296765641 # 806
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-25
